add: userのルーターとコントローラーを連携
